--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.9.0",
     "@stellar/design-system": "^0.6.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -10,11 +11,14 @@
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.7",
+    "mdbreact": "^5.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.1",
+    "react-parallax": "^3.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "simple-parallax-js": "^5.6.2",
     "stellar": "0.0.0",
     "superagent": "^7.1.1",
     "typescript": "^4.5.5",
