--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "ethers": "^5.5.4",
     "firebase": "^9.6.7",
     "mdbreact": "^5.2.0",
     "react": "^17.0.2",
