--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-parallax": "^3.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-table": "^7.7.0",
     "simple-parallax-js": "^5.6.2",
     "stellar": "0.0.0",
     "superagent": "^7.1.1",
